# rich-strawberry

./: .pdm.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/: example.py  example_with_subscription.py  schema.py
rich_strawberry/: __init__.py  extension.py  logger.py  schema.py
tests/: conftest.py  query.py  test_context_logging.py  test_default_error_logging.py  test_rich_strawberry.py  traceback_parser.py
