[tool.poetry]
name = "rich-strawberry"
version = "0.1.0"
description = ""
authors = ["zlira <olesia.hr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = {extras = ["debug-server", "cli"], version = "0.154.0"}
rich = ">=12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.6.0"
ipdb = "^0.13.9"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["strawberry.ext.mypy_plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
